@@ -1,9 +1,10 @@
 1.2
 ---
-Commands for batch processing, and other batch fixes.
+Command for batch processing, and other batch fixes.
 Better error messages when user applies for cert with browser.
 Fixed bug where NextUpdate in CRLs were incorrect.
 Fixed problem receiving certificate replies for subCAs.
+Function to rollover Root CA with same key pair.
 Minor improvements and bugfixes.
 
 1.1
